--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
+    "vite-plugin-svgr": "^4.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
