--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
-    "@mui/material": "^6.1.7",
+    "@mui/material": "^6.3.1",
+    "@mui/system": "^6.3.1",
     "i18n": "^0.15.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-lazy-load-image-component": "^1.6.2",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
+    "vite-plugin-checker": "^0.8.0",
     "vite-plugin-svgr": "^4.3.0",
     "zod": "^3.23.8"
   },
@@ -27,6 +29,7 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
