--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "lib": ["es2017", "dom"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true
   }
 }
